# Ardesco-SDK

./: .gitignore  README.md  ardcmdprompt.cmd  ardesco.cmake
apps/52ipc_simple/: CMakeLists.txt  README.rst  nrf52840_ard0022B.overlay  prj.conf  prj_v12.conf
apps/52ipc_simple/src/: main.c
apps/91ipc_simple/: CMakeLists.txt  README.rst  nrf9160_ard0021Bns.overlay  nrf9160_ard0022Bns.overlay  prj.conf  prj_v12.conf
apps/91ipc_simple/src/: main.c
apps/grove_console/: CMakeLists.txt  README.rst  nrf9160_ard0022Bns.overlay
apps/grove_i2c/: CMakeLists.txt  README.rst  nrf9160_ard0022Bns.overlay  prj.conf
apps/grove_i2c/drivers/sht35/: CMakeLists.txt  sht35.c
apps/grove_i2c/src/: env_sensors.h  main.c  sht35.h
apps/hello_52840/: CMakeLists.txt  README.rst  prj.conf
apps/hello_52840/src/: main.c
apps/hello_world/: CMakeLists.txt
apps/using_sensors/: CMakeLists.txt  README.rst  prj.conf
apps/using_sensors/src/: main.c
ard1.2/: ardescoext.cmake
ard1.2/boards/arm/nrf52840_ard0011A/: nrf52840_ard0011A.dts
ard1.2/boards/arm/nrf52840_ard0021B/: nrf52840_ard0021B.dts
ard1.2/boards/arm/nrf52840_ard0022B/: Kconfig  Kconfig.defconfig  nrf52840_ard0022B.dts  nrf52840_ard0022B_defconfig
ard1.2/boards/arm/nrf52840_ard0031A/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf52840_ard0031A.dts  nrf52840_ard0031A_defconfig
ard1.2/boards/arm/nrf9160_ard0011A/: CMakeLists.txt  Kconfig.defconfig  board_nonsecure.c  board_secure.c  nrf9160_ard0011A.yaml  nrf9160_ard0011A_common.dts  nrf9160_ard0011A_defconfig  nrf9160_ard0011A_partition_conf.dts  nrf9160_ard0011Ans_defconfig
ard1.2/boards/arm/nrf9160_ard0021B/: Kconfig.defconfig  board_nonsecure.c  board_secure.c  nrf9160_ard0021B_common.dts  nrf9160_ard0021B_defconfig  nrf9160_ard0021Bns_defconfig
ard1.2/boards/arm/nrf9160_ard0022B/: Kconfig.board  Kconfig.defconfig  board_nonsecure.c  board_secure.c  nrf9160_ard0022B_common.dts  nrf9160_ard0022B_defconfig  nrf9160_ard0022B_partition_conf.dts  nrf9160_ard0022Bns_defconfig
ard1.3/boards/arm/nrf52840_ard0011A/: nrf52840_ard0011A.dts  (+1 more)
ard1.4/: ardescoext.cmake
cmake/: board_def.cmake
drivers/: CMakeLists.txt  Kconfig  adp5360.h
drivers/adp5360/: CMakeLists.txt  Kconfig  adp5360.c
include/: accel_sensor.h  ard_led.h  ardesco.h  back_compat.h  battery_monitor.h  env_sensor.h  gpio_compat.h  ipc_communication.h  persist_data.h  serial_52lib.h  usb_uart.h
lib/ipclib/: CMakeLists.txt  ipc_52lowlevel.c  ipc_91lowlevel.c  ipc_common.c  ipc_lowlevel.h
lib/led_lib/: CMakeLists.txt  led_lib_ard.c
lib/persist_data/: CMakeLists.txt  Kconfig  persist_data.c
lib/sensor_lib/: CMakeLists.txt  accel.c  env.c  sensor_common.c  sensor_common.h
lib/serial_52lib/: CMakeLists.txt  README.rst  serial_52lib.c
lib/usb_uart_52lib/: CMakeLists.txt  usb_uart.c
nrf9160_ard0031A/: Kconfig.board  Kconfig.defconfig  board_nonsecure.c  board_secure.c  nrf9160_ard0031A.yaml  nrf9160_ard0031A_common.dts
samples/: README.txt
samples/at_client/: CMakeLists.txt
samples/usb_uart_bridge/: CMakeLists.txt  nrf52840_ard0022B.overlay  prj.conf
samples/usb_uart_bridge/src/: main.c
templates/hello_world/: CMakeLists.txt  README.rst  prj.conf
templates/hello_world/src/: main.c
(+95 files in other folders)
